[workspace]
resolver = "2"
members = [
    "libonm",
    "xpuctl",
    "smctl",
    "hcactl",
    "ethctl",
]

[workspace.dependencies]
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }

clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.1"}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
serde_json = "1"

reqwest = { version = "0.13", features = ["json"] }
http = "1.4"
bytes = "1"
url = { version = "2", features = ["serde"] }
ethtool = "0.2"
rtnetlink = "0.21"
netlink-packet-route = "0.30"
futures = "0.3"
