[package]
name = "ethctl"
version = "0.1.0"
edition = "2021"

[dependencies]
libonm = { path = "../libonm" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
comfy-table = "7.2.2"
