[package]
name = "xpuctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libonm = {path = "../libonm"}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

reqwest = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }